# libmpv-darwin-build

./: .gitignore  .tool-versions  LICENSE.txt  Makefile  README.md  Taskfile.yaml  flake.nix  go.mod  packages.lock.nix
.github/workflows/: ci.yaml
cmd/download/: download.go
cmd/downloads/: main.go
cmd/lock/: lock.go
cmd/release-note/: main.go
cmd/tool-versions/: main.go
cmd/update/: update.go
cmd/update-downloads-lock/: main.go
cross-files/: darwin-amd64.ini  darwin-arm64.ini  ios-arm64.ini  iossimulator-amd64.ini  iossimulator-arm64.ini  macos-amd64.ini  macos-arm64.ini  tvos-arm64.ini  tvossimulator-amd64.ini  tvossimulator-arm64.ini
nix/overlays/: xcode.md  xcode.nix
nix/utils/constants/: archs.nix  flavors.nix  formats.nix  oses.nix  variants.nix
nix/utils/cross-file/: default.nix
nix/utils/default/: arch.nix  flavor.nix  flavors.nix  format.nix  os.nix  overlays.nix  pkgs.nix  variant.nix  variants.nix
nix/utils/fetch-tarball/: default.nix
nix/utils/flake/: create-cross-package.nix  create-cross-packages.nix  packages-with-targets.nix
nix/utils/name/: output.nix  package.nix  scope.nix
nix/utils/native-file/: default.nix
nix/utils/patch-shebangs/: default.nix
nix/utils/targets/: archives.nix  libs-frameworks.nix  pkgs.nix  xcframeworks.nix
nix/utils/xctoolchain/: install-name-tool.nix  lipo.nix  otool.nix  plutil.nix  plutil.swift  swiftc.nix  vtool.nix  xcodebuild.nix  xcodebuild.swift
patches/: ffmpeg-fix-dash-base-url-escape.patch  ffmpeg-fix-hls-mp4-seek.patch  ffmpeg-fix-ios-hdr-texture.patch  ffmpeg-fix-vp9-hwaccel.patch  libpng-fix-fp-header-on-apple.patch  libsrt-remove-brew-dep.patch  ltmain-target-passthrough.patch  mpv-audiounit-shared-session.patch  mpv-audiounit-skip-session-management.patch  mpv-fix-closed-captions.patch  mpv-fix-missing-objc.patch  mpv-mix-with-others.patch  mpv-remove-libass.patch  mpv-subprocess-tvos-stub.patch
pkg/lock/: lock.go
pkg/models/: lock.go
pkg/tool-versions/: tool-versions.go
pkg/utils/: utils.go
pkg/versions/: version.go
scripts/: relink_dylibs.sh
scripts/archives/: build.sh
scripts/dav1d/: build.sh
scripts/debug/: build.sh
scripts/extract/: build.sh
scripts/ffmpeg/: build.sh  meson.build  meson.options
scripts/ffmpeg/audio/: meson.build
scripts/ffmpeg/video/: meson.build
scripts/fftools-ffi/: build.sh
scripts/frameworks/: build.sh  create_frameworks.sh
scripts/frameworks/ios/: Info.plist  build-ios.sh  create_frameworks.sh
scripts/frameworks/macos/: Info.plist  build-macos.sh  create_frameworks.sh
scripts/freetype/: build.sh
scripts/fribidi/: build.sh
scripts/harfbuzz/: build.sh
scripts/libass/: build.sh  meson.build
scripts/libogg/: build.sh  meson.build
scripts/libressl/: build.sh  meson.build
scripts/libs/: build-arch.sh  build-universal.sh  build.sh  fix_iossimulator_arm64.sh  relink_dylibs.sh
scripts/libs-arch/: build.sh  relink-dylibs.sh
scripts/libs-arch/ios/: fix_iossimulator_arm64.sh
scripts/libvorbis/: build.sh  meson.build
scripts/libvpx/: build.sh
scripts/libx264/: build.sh  meson.build
scripts/libxml2/: build.sh  meson.build
scripts/links/: build.sh  status.sh
scripts/mbedtls/: build.sh  mbedtls.pc.in  meson.build
scripts/mpv/: build.sh
scripts/pkg-config/: build.sh  meson.build
scripts/uchardet/: build.sh  meson.build
scripts/xcframeworks/: build-generic.sh  build-ios.sh  build.sh
scripts/xcframeworks/ios/: create_xcframeworks.sh
scripts/xcframeworks/macos/: create_xcframeworks.sh
